kubernetes/apps/home/frigate/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: frigate-egress-nas
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: frigate
    egress:
      - toFQDNs:
          - matchName: github.com
          - matchName: api.github.com
          - matchName: raw.githubusercontent.com
        toPorts:
          - ports:
              - port: "443"
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: frigate
    egress:
      - toFQDNs:
          - matchName: nas.internal
        toPorts:
          - ports:
              - port: "5101"
              - port: "5104"
              - port: "5105"
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: frigate
    egress:
      - toPorts:
          - ports:
              - port: "554"
              - port: "2020"
